<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data></data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"

                android:paddingTop="@dimen/dialog_base_padding"
                android:paddingBottom="@dimen/dialog_base_padding"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/voice_control_title"
                    android:textAppearance="@style/TextAppearance.Body"
                    android:textAlignment="center"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/voice_selector_desc"
                    android:textAppearance="@style/TextAppearance.Medium"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/dialog_base_padding"
                    />
            </LinearLayout>
            <com.kt.apps.voiceselector.AppItemView
                android:id="@+id/gg_assistant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon_logo="@drawable/gg_assistant"
                app:title="@string/gg_assistant_title"
                app:description="@string/gg_assistant_desc"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/item_focused_background"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/always_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/always"
                    android:theme="@style/Theme.MaterialComponents"
                    android:textColor="@color/install_btn"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:textSize="14sp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/dialog_base_padding"
                    android:background="@drawable/btn_outline_focused_background"
                    android:padding="12dp"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/use_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use"
                    android:theme="@style/Theme.MaterialComponents"
                    android:textColor="@color/install_btn"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:textSize="14sp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/dialog_base_padding"
                    android:background="@drawable/btn_outline_focused_background"
                    android:padding="12dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#54FFFFFF"
                android:layout_marginTop="4dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/others_desc"
                android:textAppearance="@style/TextAppearance.Label"

                android:paddingVertical="@dimen/dialog_padding_8dp"
                android:paddingHorizontal="@dimen/dialog_base_padding"
                android:background="@drawable/btn_outline_focused_background"
                />
            <com.kt.apps.voiceselector.AppItemView
                android:id="@+id/voice_app_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon_logo="@drawable/app_icon"
                app:title="Trợ lý giọng nói Kiki"
                app:description="Điều khiển thiết bị, tìm kiếm nội dung bằng tiếng Việt từ bất kỳ đâu"
                android:background="@drawable/item_focused_background"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/install_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/install"
                android:theme="@style/Theme.MaterialComponents"
                android:textColor="@color/install_btn"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textSize="14sp"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/dialog_base_padding"
                android:background="@drawable/btn_outline_focused_background"
                android:padding="12dp"
                />
        </LinearLayout>
    </ScrollView>
</layout>
